main.tf
#---------Provider----------
provider "aws" {
  region = "us-west-2"
}
#---------instance----------

# 3. Find the Ubuntu Image (Same as before)
#
data "aws_ami" "ubuntu" {
  most_recent = true
  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"]
  }
  owners = ["099720109477"]
}

# 4. Create the Server and CONNECT everything
resource "aws_instance" "AB-lab-instance" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = var.instance_type
  subnet_id     = aws_subnet.public_subnet.id
  key_name      = "terraform-key"
  # NEW: Attach the Security Group
  vpc_security_group_ids = [aws_security_group.TF_SG.id]

  # NEW: Assign a Public IP so you can reach it from Kali
  associate_public_ip_address = true

  tags = {
    Name = var.instance_name
  }
}

#----instance web-----

resource "aws_instance" "app_server" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = var.instance_type
  subnet_id     = aws_subnet.public_subnet.id # Must be Public

  # Attach the App Security Group
  vpc_security_group_ids = [aws_security_group.TF_SG.id]

  key_name                    = "terraform-key"
  associate_public_ip_address = true
  depends_on                  = [aws_instance.db_server]

  # The Startup Script
  user_data = <<-EOF
              #!/bin/bash
              apt-get update
              apt-get install -y docker.io
              systemctl start docker
              usermod -aG docker ubuntu

              # Run the Backend first, pointing to the DB Instance IP
              docker run -d --name backend \
                -e DB_HOST=${aws_instance.db_server.private_ip} \
                -e DB_USER=postgres \
                -e DB_PASSWORD=example \
                -p 3000:3000 \
                tahirhassan01/backend-img:latest

              # Run the Frontend
              docker run -d --name frontend -p 80:80 \
                tahirhassan01/upadted-backend-color:latest
              EOF

  tags = { Name = "Frontend-Backend-Server" }
}

resource "aws_security_group" "db_sg" {
  name   = "db-sg"
  vpc_id = aws_vpc.main_vpc.id

  ingress {
    from_port = 5432
    to_port   = 5432
    protocol  = "tcp"
    # FIXED: Changed 'security_group_id' to 'security_groups'
    security_groups = [aws_security_group.TF_SG.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "Database-SG" }
}

resource "aws_instance" "db_server" {
  ami           = data.aws_ami.ubuntu.id # Ubuntu 24.04 (us-west-2)
  instance_type = var.instance_type
  subnet_id     = aws_subnet.private_subnet.id # Must be Private

  # Attach the DB Security Group
  vpc_security_group_ids = [aws_security_group.db_sg.id]

  #key_name = "your-key-name" # The name of the RSA key you generated
  #depends_on = [aws_instance.app_server]

  user_data = <<-EOF
              #!/bin/bash
              apt-get update
              apt-get install -y docker.io
              systemctl start docker
              systemctl enable docker

              docker run -d --name postgres-db \
                -e POSTGRES_USER=postgres \
                -e POSTGRES_PASSWORD=example \
                -e POSTGRES_DB=colorsdb \
                -p 5432:5432 \
                --restart always \
                postgres:16
              EOF
  tags      = { Name = "Backend-Database" }
}



#-----------VPC-------------
resource "aws_vpc" "main_vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "MY-VPC-1001"
  }
}
# 2. Create a Subnet (The Room inside the building)
resource "aws_subnet" "public_subnet" {
  vpc_id     = aws_vpc.main_vpc.id
  cidr_block = "10.0.1.0/24"
  tags = {
    Name = "public-Subnet-1001"
  }
}
# 2.1 Create a Subnet (The Room inside the building)
resource "aws_subnet" "private_subnet" {
  vpc_id     = aws_vpc.main_vpc.id
  cidr_block = "10.0.2.0/24"
  tags = {
    Name = "private-Subnet-1001"
  }
}
# 3 : create IGW
resource "aws_internet_gateway" "myIgw" {
  vpc_id = aws_vpc.main_vpc.id
}
# 4 : route Tables for public subnet
resource "aws_route_table" "PublicRT" {
  vpc_id = aws_vpc.main_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.myIgw.id
  }
}
# 5 : route table association public subnet
resource "aws_route_table_association" "PublicRTAssociation" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.PublicRT.id
}

#---------Security Group-----------
resource "aws_security_group" "TF_SG" {
  name        = "security group using Terraform"
  description = "security group using Terraform"
  vpc_id      = aws_vpc.main_vpc.id


  ingress {
    description      = "Backend API"
    from_port        = 3000
    to_port          = 3000
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }


  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "TF_SG"
  }
}
#-------------key-pair--------------
# RSA key of size 4096 bits
resource "tls_private_key" "rsa" {
  algorithm = "RSA"
  rsa_bits  = 4096
}



resource "aws_key_pair" "terraform-key" {
  key_name   = "terraform-key"
  public_key = tls_private_key.rsa.public_key_openssh
}



resource "local_file" "faah" {
  content  = tls_private_key.rsa.private_key_openssh
  filename = "keyfile"
}

#-----------S3------------
#123
#terraform {
#backend "s3" {
#bucket = "your-unique-terraform-state-bucket"
#key    = "dev/terraform.tfstate"
# region = "us-east-1"
#}
#}

output "private_key" {
  value     = tls_private_key.rsa.private_key_pem
  sensitive = true
}


terraform {
  backend "s3" {
    bucket  = "tahir-hassan-tfstate-unique"
    key     = "dev/terraform.tfstate"
    region  = "us-west-2"
    encrypt = true
    # dynamodb_table = "terraform-lock" # Optional: for state locking
  }


}
#---------NAT--------
resource "aws_eip" "nat_eip" {
  domain = "vpc"
  tags   = { Name = "NAT-EIP" }
}
resource "aws_nat_gateway" "main_nat" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public_subnet.id # Place in Public Subnet

  tags = { Name = "Main-NAT-Gateway" }

  # Ensure IGW exists before creating NAT
  depends_on = [aws_internet_gateway.myIgw]
}
resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.main_vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main_nat.id
  }

  tags = { Name = "Private-Route-Table" }
}

resource "aws_route_table_association" "private_assoc" {
  subnet_id      = aws_subnet.private_subnet.id
  route_table_id = aws_route_table.private_rt.id
}
